# pinpoint-c-agent

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Changes-CN.md  Changes.md  MANIFEST.in  NOTICE  README  README-CN.md  README-zhongwen.md  README.md  codecov.yml  config.m4  requirements.txt  setup.py  setup_pypi.py  setup_pypi_test.py  setup_test.py
.devcontainer/: .gitignore  Dockerfile  devcontainer.json  docker-compose.yaml  php.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: -golang--custom-issue-template.md  -php--custom-issue-template.md  -python--custom-issue-template.md  custom-issue-name.md  custom.md  tasklists.md
.github/workflows/: add-contributors.yml  build-testpypi-wheels.yml  build-wheels.yml  cmake-multi-platform.yml  codeql-analysis.yml  main.yml  publish-build-env.yml  publish-collector-agent.yml  publish-py.yml  publish-pypi copy.yml  publish-pypi.yml  publish-pypitest.yml  publish-test.yml  publish.yml
DOC/API/: common.h
DOC/C-CPP/: Readme.md
DOC/CollectorAgent/: Readme-CN.md  Readme.md
DOC/GO/: Readme.md
DOC/PHP/: Readme-CN.md  Readme-KR.md  Readme.md  SupportPlan.md  Testapp-Docker-Manual.md  User Manual-CN.md  User Manual.md  detail_versions-CN.md  detail_versions.md
DOC/PY/: Readme-CN.md  Readme-KR.md  Readme.md  SupportPlan.md
DOC/collector-agent/: readme.md
DOC/common/: Readme.md
Example/: PHP-Readme-CN.md  PHP-Readme.md
Example/PHP/: PHP-Readme-CN.md  PHP-Readme.md  Readme-CN.md  Readme.md  composer.json
Example/PHP5/: composer.json
Example/PY/: Readme-CN.md  Readme.md  app.py  requirements.txt  student.py  teacher.py  test_function.py  test_lambda.py  test_special.py
PHP/: Readme.md
collector-agent/: .gitignore  CHANGES.md  Dockerfile  env.list  go.mod  go.sum  init_python_env.sh  makefile  readme.md  requirements.txt  run.py  run.sh  run_first.sh  server.go  start-collector-agent.sh  todo.md
common/: .clang-format  CHANGES.md  CMakeLists.txt  CMakeLists.txt.in  Dockerfile  Go1.16.Dockerfile  cppcheck.sh  readme.md
common/cmake/: FindGTest.cmake  Findpcre.cmake
common/include/: common.h  common.h.in  types.h
common/json/: CMakeLists.txt
common/jsoncpp/: CMakeLists.txt
common/jsoncpp/include/json/: allocator.h  assertions.h  config.h  forwards.h  json.h  json_features.h  reader.h  value.h  version.h  writer.h
common/jsoncpp/lib_json/: json_reader.cpp  json_tool.h  json_value.cpp  json_valueiterator.inl  json_writer.cpp
common/pkg-config/: pinpoint_common.pc  pinpoint_common.pc.in
common/src/: CMakeLists.txt  Chunk.cpp  Chunk.h  Logging.c  Logging.cpp  SharedObj.c  TransLayer.cpp  TransLayer.h  common.cpp  define.h  header.h  test_common.cc  test_util.cc
common/src/Cache/: Chunk.cpp  Chunk.h  NodeTreeWriter.cpp  NodeTreeWriter.h  SafeSharedState.cpp  SafeSharedState.h  SharedObj.c  SharedObj.cpp  SharedObj.h  State.cpp  State.h  test_chunk.cc  test_state.cc
common/src/ConnectionPool/: SpanConnectionPool.cpp  SpanConnectionPool.h  TransLayer.cpp  TransLayer.h  sockets.h  test_trans_layer.cc
common/src/Context/: ContextType.cpp  ContextType.h
common/src/NodePool/: NodePool.cpp  NodePool.h  PoolManager.cpp  PoolManager.h  TraceNode.cpp  TraceNode.h  test_node.cc  test_node_pool.cc
common/src/Util/: Helper.cpp  Helper.h  Trace.h
common/test/: CMakeLists.txt  WindowsTestEnv.wsb  test_chunk.cc  test_common.cc  test_common.cc.bak  test_genUniqId.cc  test_main.cc  test_main.cpp  test_node.cc  test_node_pool.cc  test_shm.cc  test_trans_layer.cc  test_util.cc
docker/: Dockerfile
pinpoint_apache/: Makefile  mod_pinpoint.cpp
pinpoint_common/: Makefile  agent_data_sender.cpp  agent_data_sender.h  agent_monitor_sender.cpp  agent_monitor_sender.h  api_data_sender.cpp  api_data_sender.h  buffer.cpp  buffer.h  data_sender.cpp  data_sender.h  executor.cpp  executor.h  hand_shake_sender.cpp  hand_shake_sender.h  log.c  log.h  log_utility.cpp  log_utility.h  memory_pool.h  os.h  pinpoint_agent.cpp  pinpoint_agent.h  pinpoint_agent_context.cpp  pinpoint_agent_context.h  pinpoint_api.cpp  pinpoint_api.h  pinpoint_client.cpp  pinpoint_client.h  pinpoint_def.h  pinpoint_error.h  pinpoint_lock.h  pinpoint_ping.cpp  pinpoint_ping.h  pinpoint_plugin.cpp  pinpoint_plugin.h  pinpoint_type.cpp  pinpoint_type.h  serializer.cpp  serializer.h  (+8 more)
pinpoint_php/: .gitignore  Build.sh  README.md  aop_hook.cpp  aop_hook.h  config.m4  deploy_third_party.sh  interceptor.cpp  interceptor.h  php_common.cpp  php_common.h  php_define_wapper.h  php_function_helper.cpp  php_function_helper.h  php_interfaces.cpp  php_interfaces.h  php_pinpoint.h  php_plugin.cpp  php_plugin.h  pinpoint_ext.cpp
pinpoint_php_example/: Readme.md
pinpoint_php_ext/: common.h  config.m4  php_pinpoint_php.h  pinpoint_helper.cpp  pinpoint_helper.h  pinpoint_php.cpp  pinpoint_php_api.php  r.sh
src/CPP/: CMakeLists.txt  pinpoint_define.h  test_pinpoint.c  test_pinpoint.cpp
test/: Makefile  README.md  agent_test.cpp  buffer_test.cpp  data_sender_test.cpp  data_sender_test2.cpp  executor_test.cpp  handshake_test.cpp  pinpoint_agent_test.conf  pinpoint_client_test.cpp  pp_test_common_utility.cpp  pp_test_config.cpp  pp_test_log.cpp  pp_test_memory_pool.cpp  pp_test_shm_usage.cpp  pp_test_utility.h  run_mem_test.sh  serializer_test.cpp  test_env.h  test_evn.cpp  test_server.cpp  test_server.h  trace_test.cpp  utility_test.cpp
testapps/: .dockerignore  backend.dockerfile  compose.yaml  db.sql  django.dockerfile  fastapi.dockerfile  flask.dockerfile  grpc_py.dockerfile  grpc_py_client.dockerfile  httpbin.dockerfile  load_sample_db.sh  php.dockerfile  python-plugins.dockerfile  readme.md
tests/: add_root_trace.phpt  drop_trace_test.phpt  mark_as_error.phpt  node_test.phpt  performance.php  stack_fetal_error.phpt  trace_api_context.phpt  trace_api_context_tcp.phpt  trace_api_test.phpt  trace_api_with_id.phpt  trace_limit_test-i448.phpt  trace_limit_test.phpt
tests5/: add_root_trace.phpt  stack_fetal_error.phpt  trace_api_with_id.phpt  trace_limit_test.phpt
(+1412 files in other folders)
